@@ -1,20 +1,27 @@
-pipeline {
-    agent {
-        label 'win_default'
+node {
+    // Get Artifactory server instance, defined in the Artifactory Plugin administration page.
+    def server = Artifactory.server "SERVER_ID"
+    // Create an Artifactory Maven instance.
+    def rtMaven = Artifactory.newMavenBuild()
+    def buildInfo
+
+    stage('Clone sources') {
+        git url: 'https://github.com/jfrogdev/project-examples.git'
     }
-    tools {
-        jdk 'Java 8.291'
+
+    stage('Artifactory configuration') {
+        // Tool name from Jenkins configuration
+        rtMaven.tool = "Maven-3.3.9"
+        // Set Artifactory repositories for dependencies resolution and artifacts deployment.
+        rtMaven.deployer releaseRepo:'libs-release-local', snapshotRepo:'libs-snapshot-local', server: server
+        rtMaven.resolver releaseRepo:'libs-release', snapshotRepo:'libs-snapshot', server: server
     }
-    environment {
-        GIT_TOKEN = credentials('git-token')
-        MAVEN_OPTS="-XX:MetaspaceSize=512m -XX:MaxMetaspaceSize=4G -Xms4G -Xmx8G -XX:+AggressiveOpts -XX:+UseConcMarkSweepGC -Dmaven.artifact.threads=20"
+
+    stage('Maven build') {
+        buildInfo = rtMaven.run pom: 'maven-example/pom.xml', goals: 'clean install'
     }
-    options {
-        buildDiscarder logRotator(artifactDaysToKeepStr: '', artifactNumToKeepStr: '', daysToKeepStr: '7', numToKeepStr: '20')
-        disableConcurrentBuilds()
+
+    stage('Publish build info') {
+        server.publishBuildInfo buildInfo
     }
-    triggers {
-        bitBucketTrigger([
-            [$class: 'BitBucketPPRPullRequestServerTriggerFilter', actionFilter: [$class: 'BitBucketPPRPullRequestServerCreatedActionFilter', allowedBranches: '']]
-        ])
-    }
+}
